cleanup threeshold for statechunk